implement clean_name method for StrainForm

--- a/templates/strain_form.html
+++ b/templates/strain_form.html
@@ -9,6 +9,11 @@
         {{ form.as_table }}
         <input type="submit" value="Submit">
     </form>
-
 </div>
+{% if messages %}
+{% for message in messages %}
+<strong><p>{{ message }}</p></strong>
+{% endfor %}
+{% endif %}
+
 {% endblock %}
