--- a/templates/strain_form.html
+++ b/templates/strain_form.html
@@ -6,7 +6,7 @@
 <div class='form-group' id='strain-form'>
     <form method="post" class="form-group">
         {% csrf_token %}
-        {{ form.as_table }}
+        {{ form.as_p }}
         <input type="submit" value="Submit">
     </form>
 </div>
