--- a/templates/strain_form.html
+++ b/templates/strain_form.html
@@ -2,13 +2,25 @@
 {% block title %}Add New Strain{% endblock %}
 
 {% block content %}
-<h2>Enter New Strain</h2>
-<div class='form-group' id='strain-form'>
-    <form method="post" class="form-group">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
-    </form>
+
+<div class="form-container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+
+            <h2>Enter New Strain</h2>
+            <div class='form-group' id='strain-form'>
+                <form method="post" class="form-group">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4"></div>
+
+</div>
 </div>
 {% if messages %}
 {% for message in messages %}
