--- a/templates/strain_form.html
+++ b/templates/strain_form.html
@@ -13,7 +13,7 @@
                 <form method="post" class="form-group">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" class="btn btn-primary">
                 </form>
             </div>
         </div>
