--- a/templates/batch_form.html
+++ b/templates/batch_form.html
@@ -1,13 +1,25 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block styles %}
+<link rel="stylesheet" href="{% static 'form_style.css' %}">
+{% endblock %}
+
 {% block content %}
-<div class="form-container">
-    <div class="form-group">
-        <form method="post">{% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" class="btn-primary" value="Submit">
-        </form>
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-8">
+        <div class="form-container">
+            <div class="form-group">
+                <form method="post">{% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" class="btn btn-primary" value="Submit">
+                </form>
+            </div>
+        </div>
+
     </div>
 </div>
+
+
 {% endblock %}
