--- a/static/form_style.css
+++ b/static/form_style.css
@@ -1,7 +1,11 @@
-.form-group {
+div .form-group {
     width: 420px;
 }
 
 div {
-    padding-top: 10px;
+    padding-top: 20px;
+}
+
+h2, h3, h4, h5 {
+    font-family: "Arimo"
 }
