--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,16 @@
+
 <!DOCTYPE html>
 <head>
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-    {%block styles %}{% endblock %}
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anybody:wght@300;400&family=Arimo&family=Bebas+Neue&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+    {%block styles %}    {% endblock %}
 </head>
 <body>
     {% block navbar %}{% endblock %}
