--- a/templates/batches.html
+++ b/templates/batches.html
@@ -1,12 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'index.html' %}
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-9"><h3>Batches</h3></div>
-    </div>
+<div class="page-title">
+    Batches
+</div>
+
     <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-8">
