--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="header">
-    <div class="row">
-        <div class="col-md-4 col-sm-4"></div>
-
-        <div class="col-md-4 col-sm-4">
-            <h2>Index</h2>
-
-        </div>
-
-    </div>
-</div>
+<div class="page-title">
+    <h3>Index</h3>
 </div>
 {% endblock %}
