--- a/templates/batches.html
+++ b/templates/batches.html
@@ -15,9 +15,9 @@
             <div class="card-title"><h5>{{ batch.strain.name.title }} by <small>{{ batch.grower.name }}</small></h5></div>
             <div class="card-body">
                 <p class="card-text">
-                <p>THC: {{ batch.thc_content }}</p>
-                <p>CBD: {{ batch.cbd_content }}</p>
-                <p>Harvest date: {{ batch.harvest_date }}</p>
+                <p>THC: {{ batch.thc_content }}%</p>
+                <p>CBD: {{ batch.cbd_content }}%</p>
+                <p>Harvest Date: {{ batch.harvest_date }}</p>
 
             </div>
         </div>
