resolve merge conflicts

--- a/templates/strain_form.html
+++ b/templates/strain_form.html
@@ -7,25 +7,25 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="form-container">
     <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-9">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h4>Add New Strain</h4>
             <div class="form-group">
                 <form method="post">{% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" value="Submit" class="btn btn-primary">
                 </form>
+                {% if messages %}
+                {% for message in messages %}
+                <p>{{ message }}</p>
+                {% endfor %}
+                {% endif %}
             </div>
         </div>
+        <div class="col-md-2 col-sm-2"></div>
     </div>
 </div>
-
-</div>
-{% if messages %}
-{% for message in messages %}
-<strong><p>{{ message }}</p></strong>
-{% endfor %}
-{% endif %}
 
 {% endblock %}
