--- a/templates/batches.html
+++ b/templates/batches.html
@@ -18,7 +18,7 @@
                 <p>THC: {{ batch.thc_content }}%</p>
                 <p>CBD: {{ batch.cbd_content }}%</p>
                 <p>Harvest Date: {{ batch.harvest_date }}</p>
-
+                <button class="btn">Terpenes</button>
             </div>
         </div>
         <br>
