--- a/templates/terpenes_form.html
+++ b/templates/terpenes_form.html
@@ -8,15 +8,19 @@
             <div class="form-group">
                 {% if batch %}
                 <form method="post" class="form">{% csrf_token %}
-                    <h5>Terpene Profile for {{ batch.strain.name }} by {{batch.grower.name }} (Harvest Date: {{ batch.harvest_date }})</h5>
+                    <h5>Terpene Profile for {{ batch.0.strain.name }} by
+                        {{batch.0.grower.name }} (Harvest Date: {{ batch.0.harvest_date }})</h5>
                     {{ form.as_p }}
                     <input type="submit" value="Submit" class="btn btn-primary">
                 </form>
-                {% else %}
-                <h4>Couldn't find id</h4>
-                {% endif %}
             </div>
         </div>
+
+        {% else %}
+        <p class="display">Couldn't find id for batch ID no. {{ batch_id }}<p>
+        {% endif %}
+
     </div>
 </div>
+
 {% endblock %}
