create terpene profile page. return 404 if terp id not found

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!DOCTYPE html>
 <head>
     <title>{% block title %}{% endblock %}</title>
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anybody:wght@300;400&family=Arimo&family=Bebas+Neue&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+
     {%block styles %}    {% endblock %}
 </head>
 <body>
