--- a/templates/batch_form.html
+++ b/templates/batch_form.html
@@ -11,6 +11,7 @@
     <div class="col-md-8">
         <div class="form-container">
             <div class="form-group">
+                <h4 class="h4">Add New Batch</h4>
                 <form method="post">{% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" class="btn btn-primary" value="Submit">
