--- a/static/style.css
+++ b/static/style.css
@@ -29,3 +29,7 @@ div.card-body button {
     background-color: #FFBA2C;
     border: 0.5px solid;
 }
+
+nav.navbar.navbar-dark.bg-dark.fixed-top {
+    height: 38px;
+}
