--- a/templates/batches.html
+++ b/templates/batches.html
@@ -2,29 +2,27 @@
 {% load static %}
 
 {% block content %}
-<div class="page-title">
-    Batches I've Smoked
-</div>
 
-<div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-8">
-        {% for batch in batches %}
-        <div class="card">
-            <img class="card-img-top" src="{{ batch.image.url }}" alt="Card image cap">
-            <div class="card-title"><h5>{{ batch.strain.name.title }} by <small>{{ batch.grower.name }}</small></h5></div>
-            <div class="card-body">
-                <p class="card-text">
-                <p>THC: {{ batch.thc_content }}%</p>
-                <p>CBD: {{ batch.cbd_content }}%</p>
-                <p>Harvest Date: {{ batch.harvest_date }}</p>
-                <button class="btn">Terpenes</button>
+<div class="cards-container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-8">
+            {% for batch in batches %}
+            <div class="card">
+                <img class="card-img-top" src="{{ batch.image.url }}" alt="Card image cap">
+                <div class="card-title"><h5>{{ batch.strain.name.title }} by <small>{{ batch.grower.name }}</small></h5></div>
+                <div class="card-body">
+                    <p class="card-text">
+                    <p>THC: {{ batch.thc_content }}%</p>
+                    <p>CBD: {{ batch.cbd_content }}%</p>
+                    <p>Harvest Date: {{ batch.harvest_date }}</p>
+                    <button class="btn">Terpenes</button>
+                </div>
             </div>
+            <br>
+            {% endfor %}
         </div>
-        <br>
-        {% endfor %}
     </div>
-
 </div>
 
 </div>
