--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
     <a class="navbar-brand" href="#">Drosmokers</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#">Batches<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">Features</a>
             <a class="nav-item nav-link" href="#">Pricing</a>
             <a class="nav-item nav-link disabled" href="#">Disabled</a>
