--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Batches</a>
+            <a class="nav-item nav-link active" href="{% url 'batches' %}">Batches</a>
         </div>
     </div>
 </nav>
