--- a/templates/base.html
+++ b/templates/base.html
@@ -21,5 +21,13 @@
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js">
     </script>
+
+    <script src="content/js/jquery.min.js"></script>
+    <script src="content/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+                    $('.dropdown-toggle').dropdown();
+                });
+    </script>
 </body>
 </html>
