--- a/templates/batches.html
+++ b/templates/batches.html
@@ -16,7 +16,7 @@
                     <p>THC: {{ batch.thc_content }}%</p>
                     <p>CBD: {{ batch.cbd_content }}%</p>
                     <p>Harvest Date: {{ batch.harvest_date }}</p>
-                    <button class="btn">Terpenes</button>
+                    <button class="btn"><a href="{% url 'terpene-profile' batch_id=batch.id %}">Terpenes</a></button>
                 </div>
             </div>
             <br>
