--- a/static/terp_profile.css
+++ b/static/terp_profile.css
@@ -3,3 +3,20 @@ div.profile-container {
     padding-left: 5.5rem;
 }
 
+div.profile-image {
+    width: 100%;
+    height: 100%;
+}
+
+div.row {
+    border: 1px solid;
+    box-shadow: 5px 8px #8888;
+    background-color: white;
+    --bs-gutter-x: 0;
+    width: 75%;
+}
+
+.display-2 {
+    padding-left: 1rem;
+    padding-top: 1rem;
+}
