update terp profile style

--- a/static/terp_profile.css
+++ b/static/terp_profile.css
@@ -16,7 +16,12 @@ div.row {
     width: 75%;
 }
 
-.display-2 {
+.profile-title {
+    padding-top: 0.5rem;
     padding-left: 1rem;
-    padding-top: 1rem;
+}
+
+.terp-profile-table {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
