--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -16,7 +16,33 @@
         </div>
 
         <div class="col-lg-8">
-            <h2 class="display-2">{{ terp.get_batch.strain.name }}</h2>
+
+            <div class="profile-title">
+                <h2 class="display-2">{{ terp.get_batch.strain.name }}</h2>
+                <h5 class="h5">{{ terp.get_batch.grower.name }}, Harvest Date: {{ terp.get_batch.harvest_date }}</h5>
+            </div>
+
+            <div class="terp-profile-table">
+                <table class="table">
+                    <thead>
+                        <th>Myrcene</th>
+                        <th>Caryophyllene</th>
+                        <th>Pinene</th>
+                        <th>Limonene</th>
+                        <th>Humulene</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>{{ terp.myrcene }} (%)</td>
+                            <td>{{ terp.caryophillene }} (%)</td>
+                            <td>{{ terp.pinene }} (%)</td>
+                            <td>{{ terp.limonene }} (%)</td>
+                            <td>{{ terp.humulene }} (%)</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </div>
 </div>
