change spelling of caryopyllene field

--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -34,7 +34,7 @@
                     <tbody>
                         <tr>
                             <td>{{ terp.myrcene }} (%)</td>
-                            <td>{{ terp.caryophillene }} (%)</td>
+                            <td>{{ terp.caryophyllene }} (%)</td>
                             <td>{{ terp.pinene }} (%)</td>
                             <td>{{ terp.limonene }} (%)</td>
                             <td>{{ terp.humulene }} (%)</td>
