add linalool to table

--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -31,6 +31,7 @@
                         <th>Pinene</th>
                         <th>Limonene</th>
                         <th>Humulene</th>
+                        <th>Linalool</th>
                     </thead>
                     <tbody>
                         <tr>
@@ -39,6 +40,7 @@
                             <td>{{ terp.pinene }} %</td>
                             <td>{{ terp.limonene }} %</td>
                             <td>{{ terp.humulene }} %</td>
+                            <td>{{ terp.linalool }} %</td>
                         </tr>
                     </tbody>
                 </table>
