output not exists message for batch with no terp profile

--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -12,6 +12,10 @@
 <div class="profile-container">
     <div class="row">
         <div class="col-lg-4">
+            {% if not terp %}
+            <h4 class="h4">Terpene Profile for batch ID: {{ batch_id }} does not
+                exist</h4>
+            {% else %}
             <img src="{{ terp.get_batch.image.url }}" class="profile-img">
         </div>
 
@@ -45,7 +49,7 @@
                     </tbody>
                 </table>
             </div>
-
+            {% endif %}
         </div>
     </div>
 </div>
