resolve merge conflict

--- a/templates/terpene_profile.html
+++ b/templates/terpene_profile.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="profile-container">
     <div class="row">
         <div class="col-lg-4">
@@ -17,14 +18,18 @@
                 exist</h4>
             {% else %}
             <img src="{{ terp.get_batch.image.url }}" class="profile-img">
+            {% if not terps %}
+            <h4>not found</h4>
+            {% else %}
+            <img src="{{ terps.get_batch.image.url }}" class="profile-img">
         </div>
 
         <div class="col-lg-8">
 
             <div class="profile-title">
-                <h2 class="display-2">{{ terp.get_batch.strain.name }}</h2>
-                <h5 class="h5"><strong>THC:</strong> {{ terp.get_batch.thc_content }}%</h5>
-                <h5 class="h5">{{ terp.get_batch.grower.name }}, Harvest Date: {{ terp.get_batch.harvest_date }}</h5>
+                <h2 class="display-2">{{ terps.get_batch.strain.name }}</h2>
+                <h5 class="h5"><strong>THC:</strong> {{ terps.get_batch.thc_content }}%</h5>
+                <h5 class="h5">{{ terps.get_batch.grower.name }}, Harvest Date: {{ terps.get_batch.harvest_date }}</h5>
             </div>
 
             <div class="terp-profile-table">
@@ -39,18 +44,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>{{ terp.myrcene }} %</td>
-                            <td>{{ terp.caryophyllene }} %</td>
-                            <td>{{ terp.pinene }} %</td>
-                            <td>{{ terp.limonene }} %</td>
-                            <td>{{ terp.humulene }} %</td>
-                            <td>{{ terp.linalool }} %</td>
+                            <td>{{ terps.myrcene }} %</td>
+                            <td>{{ terps.caryophyllene }} %</td>
+                            <td>{{ terps.pinene }} %</td>
+                            <td>{{ terps.limonene }} %</td>
+                            <td>{{ terps.humulene }} %</td>
+                            <td>{{ terps.linalool }} %</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             {% endif %}
         </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
