add Rating dropdown nav item

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                 <div class="dropdown dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'strain-form' %}">Strain</a>
                     <a class="dropdown-item" href="{% url 'batch-form' %}">Batch</a>
+                    <a class="dropdown-item" href="{% url 'rating-form' %}">Rating</a>
                 </div>
             </li>
 
